Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: bn-BD, bs-BA, pt-BR
 # Updating administrator/language/en-GB/en-GB.xml
 $ Updating installation ini files: ja-JP (TT change)

11-Jul-2011 Christophe Demko
 # [#26355] In a multi-language site, when navigation is enabled, articles tagged for other languages are also shown in addition to the language that is being viewed

11-Jul-2011 Mark Dexter
 # [#26344] Fix PHP strict warning in MenusModelMenu

11-Jul-2011 Jean-Marie Simonet
 # [#26315] Pagebreak plugin running in unexpected places plus an improvement. Thanks Elin, Christophe. + Alpha reordering of en-GB.plg_content_pagebreak.ini
 $ Updating installation ini files: nl-NL
 $ Updating installation ini files: be-BY, pl-PL, th-TH, zh-CN
 # [#26370] Remove the module position preview icons if the option is disabled. (in fact changed the icons)
 # [#26366] Platform Catchup: Can't get parameters for a module using getModule. Thanks Elin.
 # [#26365] Plugin Helper performance improvements from platform. Thanks Elin.

10-Jul-2011 Christophe Demko
 # [#26346] Sync some changes from the platforum (Rouven Weßling)
 # [#26357] Some minor enhancements to progressbar.js (Rouven Weßling)
 # [#26363] Merge more docblock changes from the platform (Rouven Weßling)

10-Jul-2011 Jean-Marie Simonet
 # [#26358] Prevent Firebug change of user name. Thanks Elin
 $ Updating installation ini files: et-EE
 # [#26308] mod_login "Reset password" link doesn't work when menu item like "Edit profile" and Frienldy URLs are present. Thanks Nikolai
 # [#26362] Joomla 1.7 JVersion class public variable not compliant with all previous Joomlas. Thanks Beat.
 $ Correcting error in sv-SE.ini
 $ Updating installation ini files: az-AZ, sy-IQ

10-Jul-2011 Andrew Eddie