@@ -31,6 +31,7 @@ $ -> Language fix or change
  $ Updating installation ini files: bn-BD, bs-BA, pt-BR
  # Updating administrator/language/en-GB/en-GB.xml
  $ Updating installation ini files: ja-JP (TT change)
+ # [#26374] "Category Order" isn't applied to Category Blog layout. Thanks Dennis.
 
 11-Jul-2011 Christophe Demko
  # [#26355] In a multi-language site, when navigation is enabled, articles tagged for other languages are also shown in addition to the language that is being viewed
